--- a/index.html
+++ b/index.html
@@ -10,9 +10,26 @@
 <body>
     
     <div class="container debug">
+
+        <!-- inizio main -->
         <main>
 
+            <!-- prima scatola -->
+            <div class="box">
+
+                <div class="box-top">
+
+                </div>
+
+                <div class="box-bottom">
+
+                </div>
+                
+            </div>
+
         </main>
+        <!-- / main -->
+
     </div>
 
 </body>
