box-top structure

--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
             <div class="box">
 
                 <div class="box-top">
-
+                    <img src="" alt="" class="img-origin">
+                    <img src="" alt="" class="img-hover">
+                    <div class="heart">&hearts;</div>
+                    <div class="infos">
+                        <span class="discount">-50%</span>
+                        <span class="sustainability">Sostenabilit&agrave;</span>
+                    </div>
                 </div>
 
                 <div class="box-bottom">
 
                 </div>
-                
+
             </div>
 
         </main>
