image hover effect

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="box">
 
                 <div class="box-top">
-                    <img src="" alt="" class="img-origin">
-                    <img src="" alt="" class="img-hover">
+                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
+                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
                     <div class="heart">&hearts;</div>
                     <div class="infos">
                         <span class="discount">-50%</span>
