--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     
-    <div class="container debug">
+    <div class="container">
 
         <!-- inizio main -->
         <main>
@@ -31,7 +31,10 @@
                 </div>
 
                 <div class="box-bottom">
-
+                    <span class="brand">Levi's</span>
+                    <h3>relaxed fit tee unisex</h3>
+                    <span class="price">14,99 &euro;</span>
+                    <span class="old-price">29,99 &euro;</span>
                 </div>
 
             </div>
