--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <div class="container">
+    <div class="container clearfix">
 
         <!-- inizio main -->
         <main>
@@ -38,6 +38,118 @@
                 </div>
 
             </div>
+
+            <!-- seconda scatola -->
+            <div class="box">
+
+                <div class="box-top">
+                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
+                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <div class="heart">&hearts;</div>
+                    <div class="infos">
+                        <span class="discount">-50%</span>
+                        <span class="sustainability">Sostenabilit&agrave;</span>
+                    </div>
+                </div>
+
+                <div class="box-bottom">
+                    <span class="brand">Levi's</span>
+                    <h3>relaxed fit tee unisex</h3>
+                    <span class="price">14,99 &euro;</span>
+                    <span class="old-price">29,99 &euro;</span>
+                </div>
+
+            </div>
+
+            <!-- terza scatola -->
+            <div class="box">
+
+                <div class="box-top">
+                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
+                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <div class="heart">&hearts;</div>
+                    <div class="infos">
+                        <span class="discount">-50%</span>
+                        <span class="sustainability">Sostenabilit&agrave;</span>
+                    </div>
+                </div>
+
+                <div class="box-bottom">
+                    <span class="brand">Levi's</span>
+                    <h3>relaxed fit tee unisex</h3>
+                    <span class="price">14,99 &euro;</span>
+                    <span class="old-price">29,99 &euro;</span>
+                </div>
+
+            </div>
+
+            <!-- quarta scatola -->
+            <div class="box">
+
+                <div class="box-top">
+                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
+                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <div class="heart">&hearts;</div>
+                    <div class="infos">
+                        <span class="discount">-50%</span>
+                        <span class="sustainability">Sostenabilit&agrave;</span>
+                    </div>
+                </div>
+
+                <div class="box-bottom">
+                    <span class="brand">Levi's</span>
+                    <h3>relaxed fit tee unisex</h3>
+                    <span class="price">14,99 &euro;</span>
+                    <span class="old-price">29,99 &euro;</span>
+                </div>
+
+            </div>
+
+            <!-- quinta scatola -->
+            <div class="box">
+
+                <div class="box-top">
+                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
+                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <div class="heart">&hearts;</div>
+                    <div class="infos">
+                        <span class="discount">-50%</span>
+                        <span class="sustainability">Sostenabilit&agrave;</span>
+                    </div>
+                </div>
+
+                <div class="box-bottom">
+                    <span class="brand">Levi's</span>
+                    <h3>relaxed fit tee unisex</h3>
+                    <span class="price">14,99 &euro;</span>
+                    <span class="old-price">29,99 &euro;</span>
+                </div>
+
+            </div>
+
+            <!-- sesta scatola -->
+            <div class="box">
+
+                <div class="box-top">
+                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
+                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <div class="heart">&hearts;</div>
+                    <div class="infos">
+                        <span class="discount">-50%</span>
+                        <span class="sustainability">Sostenabilit&agrave;</span>
+                    </div>
+                </div>
+
+                <div class="box-bottom">
+                    <span class="brand">Levi's</span>
+                    <h3>relaxed fit tee unisex</h3>
+                    <span class="price">14,99 &euro;</span>
+                    <span class="old-price">29,99 &euro;</span>
+                </div>
+
+            </div>
+
+            
 
         </main>
         <!-- / main -->
