--- a/index.html
+++ b/index.html
@@ -43,19 +43,18 @@
             <div class="box">
 
                 <div class="box-top">
-                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
-                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <img src="img/2.webp" alt="Maglietta guess con rose" class="img-origin">
+                    <img src="img/2b.webp" alt="Maglietta guess con rose lato fianco" class="img-hover">
                     <div class="heart">&hearts;</div>
                     <div class="infos">
-                        <span class="discount">-50%</span>
-                        <span class="sustainability">Sostenabilit&agrave;</span>
+                        <span class="discount">-30%</span>
                     </div>
                 </div>
 
                 <div class="box-bottom">
-                    <span class="brand">Levi's</span>
-                    <h3>relaxed fit tee unisex</h3>
-                    <span class="price">14,99 &euro;</span>
+                    <span class="brand">Guess</span>
+                    <h3>roses tee</h3>
+                    <span class="price">20,99 &euro;</span>
                     <span class="old-price">29,99 &euro;</span>
                 </div>
 
@@ -65,20 +64,18 @@
             <div class="box">
 
                 <div class="box-top">
-                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
-                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <img src="img/3.webp" alt="Completo come zucchero filato verde" class="img-origin">
+                    <img src="img/3b.webp" alt="Completo come zucchero filato grigio" class="img-hover">
                     <div class="heart">&hearts;</div>
                     <div class="infos">
-                        <span class="discount">-50%</span>
-                        <span class="sustainability">Sostenabilit&agrave;</span>
+                        <span class="discount">-30%</span>
                     </div>
                 </div>
 
                 <div class="box-bottom">
-                    <span class="brand">Levi's</span>
-                    <h3>relaxed fit tee unisex</h3>
-                    <span class="price">14,99 &euro;</span>
-                    <span class="old-price">29,99 &euro;</span>
+                    <span class="brand">Come Zucchero Filato</span>
+                    <h3>voglia di colori pastello</h3>
+                    <span class="price">129,99 &euro;</span>
                 </div>
 
             </div>
@@ -87,8 +84,8 @@
             <div class="box">
 
                 <div class="box-top">
-                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
-                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <img src="img/4.webp" alt="Maglietta Levi unisex" class="img-origin">
+                    <img src="img/4b.webp" alt="Maglietta Levi unisex con giacca" class="img-hover">
                     <div class="heart">&hearts;</div>
                     <div class="infos">
                         <span class="discount">-50%</span>
@@ -98,7 +95,7 @@
 
                 <div class="box-bottom">
                     <span class="brand">Levi's</span>
-                    <h3>relaxed fit tee unisex</h3>
+                    <h3>tee unisex</h3>
                     <span class="price">14,99 &euro;</span>
                     <span class="old-price">29,99 &euro;</span>
                 </div>
@@ -109,20 +106,15 @@
             <div class="box">
 
                 <div class="box-top">
-                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
-                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <img src="img/5.webp" alt="Vestito Maya Deluxe" class="img-origin">
+                    <img src="img/5b.webp" alt="Vestito Maya Deluxe fianco" class="img-hover">
                     <div class="heart">&hearts;</div>
-                    <div class="infos">
-                        <span class="discount">-50%</span>
-                        <span class="sustainability">Sostenabilit&agrave;</span>
-                    </div>
                 </div>
 
                 <div class="box-bottom">
-                    <span class="brand">Levi's</span>
-                    <h3>relaxed fit tee unisex</h3>
-                    <span class="price">14,99 &euro;</span>
-                    <span class="old-price">29,99 &euro;</span>
+                    <span class="brand">Maya Deluxe</span>
+                    <h3>stripe bodice</h3>
+                    <span class="price">99,99 &euro;</span>
                 </div>
 
             </div>
@@ -131,20 +123,18 @@
             <div class="box">
 
                 <div class="box-top">
-                    <img src="img/1.webp" alt="Maglietta Levi fit unisex" class="img-origin">
-                    <img src="img/1b.webp" alt="Maglietta Levi fit unisex con giacca" class="img-hover">
+                    <img src="img/6.webp" alt="Maglione nero Espritt" class="img-origin">
+                    <img src="img/6b.webp" alt="Maglione nero Espritt outfit intero" class="img-hover">
                     <div class="heart">&hearts;</div>
                     <div class="infos">
-                        <span class="discount">-50%</span>
                         <span class="sustainability">Sostenabilit&agrave;</span>
                     </div>
                 </div>
 
                 <div class="box-bottom">
-                    <span class="brand">Levi's</span>
-                    <h3>relaxed fit tee unisex</h3>
-                    <span class="price">14,99 &euro;</span>
-                    <span class="old-price">29,99 &euro;</span>
+                    <span class="brand">Espritt</span>
+                    <h3>maglione - black</h3>
+                    <span class="price">29,99 &euro;</span>
                 </div>
 
             </div>
